--- a/Brewski Dewski/Base.lproj/Main.storyboard
+++ b/Brewski Dewski/Base.lproj/Main.storyboard
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9046" systemVersion="14F1021" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="Qv9-8A-yKS">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9059" systemVersion="15B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="Qv9-8A-yKS">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9035"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9049"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
@@ -36,7 +37,7 @@
                                 <rect key="frame" x="0.0" y="92" width="600" height="44"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="3aI-Cf-8SO" id="y7B-yN-bo3">
-                                    <rect key="frame" x="0.0" y="0.0" width="600" height="43"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="600" height="43.5"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <animations/>
                                 </tableViewCellContentView>
@@ -245,38 +246,72 @@
                                 <rect key="frame" x="0.0" y="64" width="600" height="492"/>
                                 <subviews>
                                     <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="XH6-O3-bII">
-                                        <rect key="frame" x="201" y="66" width="199" height="30"/>
+                                        <rect key="frame" x="215.5" y="55.5" width="170" height="30"/>
+                                        <animations/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="30" id="B42-Ke-Q8l"/>
+                                            <constraint firstAttribute="width" constant="170" id="RKa-xd-DbI"/>
+                                        </constraints>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <textInputTraits key="textInputTraits"/>
                                     </textField>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="New Place" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="L1f-kW-TnN">
-                                        <rect key="frame" x="257" y="27" width="81" height="31"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="New Place" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="L1f-kW-TnN">
+                                        <rect key="frame" x="260.5" y="27" width="80.5" height="20.5"/>
+                                        <animations/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Type of Food" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="XCe-09-WhQ">
-                                        <rect key="frame" x="201" y="111" width="199" height="30"/>
+                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Type of Food" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="XCe-09-WhQ">
+                                        <rect key="frame" x="215.5" y="100.5" width="170" height="30"/>
+                                        <animations/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="170" id="APy-EO-tSh"/>
+                                            <constraint firstAttribute="height" constant="30" id="cBM-Ml-Ix8"/>
+                                        </constraints>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <textInputTraits key="textInputTraits"/>
                                     </textField>
-                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Favorite Dish (optional)" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Ngu-w2-WiH">
-                                        <rect key="frame" x="201" y="161" width="199" height="30"/>
+                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Favorite Dish (optional)" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Ngu-w2-WiH">
+                                        <rect key="frame" x="215.5" y="150.5" width="170" height="30"/>
+                                        <animations/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="30" id="Vbu-tb-9xf"/>
+                                            <constraint firstAttribute="width" constant="170" id="pol-UL-Ovi"/>
+                                        </constraints>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <textInputTraits key="textInputTraits"/>
                                     </textField>
-                                    <view contentMode="scaleToFill" fixedFrame="YES" placeholderIntrinsicWidth="240" placeholderIntrinsicHeight="44" translatesAutoresizingMaskIntoConstraints="NO" id="rH3-ip-sBg" customClass="RatingControl" customModule="Brewski_Dewski" customModuleProvider="target">
-                                        <rect key="frame" x="201" y="319" width="240" height="128"/>
+                                    <view contentMode="scaleToFill" placeholderIntrinsicWidth="240" placeholderIntrinsicHeight="44" translatesAutoresizingMaskIntoConstraints="NO" id="rH3-ip-sBg" customClass="RatingControl" customModule="Brewski_Dewski" customModuleProvider="target">
+                                        <rect key="frame" x="180" y="244" width="240" height="44"/>
+                                        <animations/>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="44" id="WIS-eH-HuS"/>
+                                            <constraint firstAttribute="width" constant="240" id="rE9-KI-uRs"/>
+                                        </constraints>
                                     </view>
                                 </subviews>
                                 <animations/>
                                 <color key="backgroundColor" red="1" green="0.18017227533416047" blue="0.87171401315779318" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
-                                    <constraint firstItem="XH6-O3-bII" firstAttribute="leading" secondItem="Gqj-js-D8o" secondAttribute="leading" constant="201" id="KzG-s2-NXu"/>
-                                    <constraint firstAttribute="trailing" secondItem="XH6-O3-bII" secondAttribute="trailing" constant="200" id="m0M-A7-QtP"/>
-                                    <constraint firstItem="XH6-O3-bII" firstAttribute="top" secondItem="Gqj-js-D8o" secondAttribute="top" constant="66" id="nwf-Xm-4rF"/>
+                                    <constraint firstItem="rH3-ip-sBg" firstAttribute="centerX" secondItem="Gqj-js-D8o" secondAttribute="centerX" id="0AD-GA-B9g"/>
+                                    <constraint firstItem="XH6-O3-bII" firstAttribute="top" secondItem="L1f-kW-TnN" secondAttribute="bottom" constant="8" id="0b1-FG-fsW"/>
+                                    <constraint firstItem="rH3-ip-sBg" firstAttribute="top" secondItem="Ngu-w2-WiH" secondAttribute="bottom" constant="63.5" id="6wB-SN-ypb"/>
+                                    <constraint firstItem="rH3-ip-sBg" firstAttribute="centerX" secondItem="Gqj-js-D8o" secondAttribute="centerX" id="CTR-ND-s54"/>
+                                    <constraint firstItem="XH6-O3-bII" firstAttribute="centerX" secondItem="Gqj-js-D8o" secondAttribute="centerX" id="SFo-Hk-E3e"/>
+                                    <constraint firstItem="L1f-kW-TnN" firstAttribute="centerX" secondItem="Gqj-js-D8o" secondAttribute="centerX" id="TSO-h8-cvX"/>
+                                    <constraint firstItem="XCe-09-WhQ" firstAttribute="top" secondItem="XH6-O3-bII" secondAttribute="bottom" constant="15" id="ZnV-9G-0Rk"/>
+                                    <constraint firstItem="Ngu-w2-WiH" firstAttribute="centerX" secondItem="Gqj-js-D8o" secondAttribute="centerX" id="byL-ay-yet"/>
+                                    <constraint firstItem="Ngu-w2-WiH" firstAttribute="top" secondItem="XCe-09-WhQ" secondAttribute="bottom" constant="20" id="kt4-LP-iol"/>
+                                    <constraint firstItem="XCe-09-WhQ" firstAttribute="centerX" secondItem="Gqj-js-D8o" secondAttribute="centerX" id="s65-V1-4s8"/>
+                                    <constraint firstItem="L1f-kW-TnN" firstAttribute="top" secondItem="Gqj-js-D8o" secondAttribute="top" constant="27" id="yuB-lC-PMb"/>
                                 </constraints>
+                                <variation key="default">
+                                    <mask key="constraints">
+                                        <exclude reference="0AD-GA-B9g"/>
+                                    </mask>
+                                </variation>
                             </view>
                         </subviews>
                         <animations/>
